--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "author": "Revidovich Ann",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
