--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "author": "Revidovich Ann",
   "version": "0.1.0",
   "private": true,
-  "homepage": ".",
+  "homepage": "https://nutkatuz.github.io",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
+    "gh-pages": "^3.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
@@ -19,7 +20,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "npm run build && scp -r ./build/* teslauser@178.154.228.91:/home/teslauser/news-frontend"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
