--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "author": "Revidovich Ann",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://nutkatuz.github.io",
+  "homepage": ".",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
@@ -20,8 +20,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "npm run build && scp -r ./build/* teslauser@178.154.228.91:/home/teslauser/news-frontend"
   },
   "eslintConfig": {
     "extends": [
